# SuperCV

./: .gitignore  README.md  README_en.md
.github/workflows/: build.yml
client/supercv-react/: package.json  tsconfig.json
client/supercv-react/src-tauri/: tauri.conf.json
client/supercv-vue/: .prettierrc  index.html  package.json  tsconfig.json
client/supercv-vue/src-tauri/: .gitignore  Cargo.toml  rustfmt.toml  tauri.conf.json
client/supercv-vue/src-tauri/icons/: icon.icns
client/supercv-vue/src-tauri/migration/: Cargo.toml
client/supercv-vue/src-tauri/migration/src/: lib.rs  m20240714_065956_create_clipboard_table.rs
client/supercv-vue/src-tauri/src/: clipboard_helper.rs  main.rs  shortcut.rs
client/supercv-vue/src-tauri/src/api/: api.rs  api_client.rs  common.rs  http_client.rs  mod.rs
client/supercv-vue/src-tauri/src/api/http/: user.rs
client/supercv-vue/src-tauri/src/api/models/: device.rs  mod.rs  user.rs
client/supercv-vue/src-tauri/src/api/tests/http_client/: clipboard.rs  device.rs  file.rs  user.rs
client/supercv-vue/src-tauri/src/client/: common.rs  http_client.rs  mod.rs
client/supercv-vue/src-tauri/src/client/models/: clipboard.rs  device.rs  file.rs  mod.rs  user.rs
client/supercv-vue/src-tauri/src/client/tests/: mod.rs
client/supercv-vue/src-tauri/src/client/tests/http_client/: clipboard.rs  device.rs  file.rs  mod.rs  user.rs
client/supercv-vue/src-tauri/src/core/: clipboard.rs  mod.rs  pasteboard.rs
client/supercv-vue/src-tauri/src/db/: connection.rs  mod.rs
client/supercv-vue/src-tauri/src/db/crud/: host_clipboard.rs  mod.rs
client/supercv-vue/src-tauri/src/db/entities/: host_clipboard.rs  mod.rs  prelude.rs
client/supercv-vue/src-tauri/src/utils/: base64.rs  cipher.rs  config.rs  file.rs  hash.rs  logger.rs  mod.rs  time.rs  uuid.rs  x11_window.rs
docs/: faq.md
server/: README.md
server/py_server/: Dockerfile  config.ini  docker-compose.yml  requirements.txt  run.py  server.py
(+35 files in other folders)
