[package]
name = "supercv-vue"
version = "0.1.2"
description = "Clipboard Enhancement Tools"
authors = ["zeke-chin", "N1body"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [
    "fs-read-dir",
    "fs-read-file",
    "protocol-all",
    "macos-private-api",
    "global-shortcut-all",
    "window-all",
    "system-tray",
    "shell-open",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

sea-orm = { version = "0.12", features = [
    "sqlx-sqlite",
    "runtime-tokio-rustls",
    "macros",
] }
migration = { path = "migration" }
sea-orm-migration = "0.12.15"
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
dirs = "5.0"
uuid = { version = "1.10.0", features = [
    "v4",
    "fast-rng", # Use a faster (but still sufficiently random) RNG
] }
base62 = "2.0"
fltk = "^1.4"
once_cell = "1.8.0"
url = "2.5.2"
urlencoding = "2.1.0"
log = "0.4.22"
flexi_logger = { version = "0.28.5", features = ["async"] }
lazy_static = "1.5.0"
env_logger = "0.11.3"
unicode-segmentation = "1.11.0"
rayon = "1.10.0"
toml = "0.8.15"
deepsize = "0.2"
image = "0.25.2"
clipboard-rs = { git = "https://github.com/Zeke-chin/clipboard-rs" }
twox-hash = "1.6.0"
window-vibrancy = "0.4"
mac_address = "1.1.7"
sysinfo = "0.30.13"
aes-gcm = "0.10.3"
pbkdf2 = "0.12.2"
sha2 = "0.10.8"
rand = "0.8.5"
base64 = "0.21.7"
reqwest = { version = "0.12.5", features = ["json", "multipart"] }
async-trait = "0.1.81"
mockito = "0.30.0"


[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.dev]
incremental = true

[profile.release]
incremental = true
